// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AppLayout/> with children 1`] = `
<ScrollToTop>
  <div
    className="app-layout"
  >
    <withRouter(HeaderNav) />
    <div>
      Child
    </div>
    <div>
      <span>
        Child
      </span>
      <p>
        Child
      </p>
    </div>
  </div>
</ScrollToTop>
`;

exports[`renders <AppLayout/> with one child 1`] = `
<ScrollToTop>
  <div
    className="app-layout"
  >
    <withRouter(HeaderNav) />
    <div>
      child
    </div>
  </div>
</ScrollToTop>
`;

exports[`renders empty <AppLayout/> 1`] = `
<ScrollToTop>
  <div
    className="app-layout"
  >
    <withRouter(HeaderNav) />
  </div>
</ScrollToTop>
`;
